src/test/deca/context/invalid/declaVariable-doubleDeclaration.context
declaVariable-doubleDeclaration.deca:12:
